--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://artyomzolotykh.github.io/homeworks-composition-cards",
+  "homepage": "https://artyomzolotykh.github.io/homeworks-composition-cards/index.html",
   "name": "homeworks-composition-cards",
   "version": "0.1.0",
   "private": true,
